# webkitten

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
assets/: README.md
src/: logger.cpp  logger.h  main.cpp  main.h
src/classes/main/: handler.cpp  handler.h  networker.cpp  networker.h  networkerBarrier.cpp  networkerBarrier.h  renderer.cpp  renderer.h  request.cpp  request.h  scripter.cpp  scripter.h
src/classes/tab/: tab.cpp  tab.h
src/classes/ui/: button.cpp  fonts.cpp  fonts.h  input.cpp  ui.h
src/classes/ui/classes/: input.cpp  input.h
src/internal/gsgl/: README.md  graphics.cpp  gsgl.h  text.cpp  utils.cpp
src/libs/: backward.hpp
